Desafio SASS II & SEO

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,13 +4,15 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
+        <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
     
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/estilos.css">
+        <link rel="stylesheet" href="./sass/estilos.css">
     
-        <title>Nosotros</title>
+        <title>Empresa especialista en Sublimación</title>
       </head>
 <body>
     <!-- Encabezado -->
@@ -30,16 +32,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="nosotros.html">Nosotros</a>
+                <a class="nosotros--link active" href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos.html">Productos</a>
+                <a class="productos--link" href="productos.html">Productos</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="servicios--link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Servicios
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -51,6 +53,10 @@
           </div>
         </div>
       </nav>
+
+      <div class="formatoTitulos">
+        <h1>NOSOTROS</h1>
+    </div>
 
       <!-- Intro -->
 
@@ -64,13 +70,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-                <img src="./img/nosImg02.jpeg" class="d-block w-100" alt="...">
+                <img src="./img/nosImg02.jpeg" class="d-block w-100" alt="Ejemplo producto 01">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/nosImg03.jpeg" class="d-block w-100" alt="...">
+                <img src="./img/nosImg03.jpeg" class="d-block w-100" alt="Ejemplo producto 02">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/nosImg04.jpeg" class="d-block w-100" alt="...">
+                <img src="./img/nosImg04.jpeg" class="d-block w-100" alt="Ejemplo producto 03">
             </div>
         </div>
     </div>
@@ -82,10 +88,11 @@
     <section>
         <div class="w-75 m-auto text-center" id="equipo">
             <span class="text-primary mb-5 fs-2">Pista Sublimación</span>
-            <p class="fs-4">Expertos en las técnicas de Sublimación y Vinil Textil</p>
+            <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
+            <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid" src="./img/Portada_02.jpg" alt="">
+            <img class="img-fluid" src="./img/Portada_02.jpg" alt="Imagen grande de la empresa">
         </div>
     </section>
 
