--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
+    <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./sass/estilos.css">
 
-    <title>Portada Bootstrap</title>
+    <title>Pista: Personaliza lo que quieras con nostoros</title>
 </head>
 
 <body>
 
     <!-- Encabezado -->
-    <header class="container-fluid d-flex justify-content-center" id="encabezado">
-        <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p>
+    <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
+        <header class="encabezadoMixin"></header>
+        <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+        <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="./img/abejaP.png" alt="" width="120" height="80">
+                <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -35,16 +39,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nosotros--link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Productos</a>
+                        <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="servicios--link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                         </a>
@@ -58,18 +62,22 @@
         </div>
     </nav>
 
+    <div class="formatoTitulos">
+    <h1>INICIO</h1>
+</div>
+
     <!--SLIDER DE IMAGENES-->
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-                <img src="./img/carr01.jpg" class="d-block w-100" alt="...">
+                <img src="./img/carr01.jpg" class="d-block w-100" alt="Imagen inicio 01">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/carr02.jpg" class="d-block w-100" alt="...">
+                <img src="./img/carr02.jpg" class="d-block w-100" alt="Imagen inicio 02">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/carr03.jpg" class="d-block w-100" alt="...">
+                <img src="./img/carr03.jpg" class="d-block w-100" alt="Imagen inicio 03">
             </div>
         </div>
     </div>
@@ -86,28 +94,28 @@
     <section class="container-fluid">
         <div class="row w-75 mx-auto servicios-fila">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Pista" width="180" height="160">
+                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
                 <div>
                     <h3 class="fs-5 mt-4 px-4 pb-1">Sublimación Tazas</h3>
                     <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Pista" width="180" height="160">
+                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
                 <div>
                     <h3 class="fs-5 mt-4 px-4 pb-1">Sublimación Gorras</h3>
                     <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Pista" width="180" height="160">
+                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
                 <div>
                     <h3 class="fs-5 mt-4 px-4 pb-1">Vinil Textil Playeras</h3>
                     <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Pista" width="180" height="160">
+                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
                 <div>
                     <h3 class="fs-5 mt-4 px-4 pb-1">Vinil Textil Gorras</h3>
                     <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
@@ -121,7 +129,8 @@
     <section>
         <div class="w-75 m-auto text-center" id="equipo">
             <h1 class="mb-5 fs-2">Personaliza lo que quieras <span class="text-primary">Pista Sublimación</span></h1>
-            <p class="fs-4">Expertos en las técnicas de Sublimación y Vinil Textil</p>
+            <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
+            <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
             <img class="img-fluid" src="./img/Portada_02.jpg" alt="">
