--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -11,6 +11,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
+        <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="./img/abejaP.png" alt="" width="120" height="80">
+                <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -67,7 +69,7 @@
     <!--SLIDER DE IMAGENES-->
 
     <div class="mt-5 text-center">
-        <img src="./img/pagina-en-mantenimiento.jpeg" class="img-fluid" alt="...">
+        <img src="./img/pagina-en-mantenimiento.jpeg" class="img-fluid" alt="Imagen página en mantenimiento">
     </div>
 
     <!-- Footer -->
@@ -78,7 +80,7 @@
             <p class="fs-4"></p>
         </div>
         <div class="mt-5 text-center">
-            <img class="w-85" src="./img/Portada_02.jpg" alt="">
+            <img class="w-85" src="./img/Portada_02.jpg" alt="Img demo del producto">
         </div>
     </section>
 
