--- a/sublimacion.html
+++ b/sublimacion.html
@@ -5,14 +5,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
+    <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/estilos.css">
+        <link rel="stylesheet" href="./sass/estilos.css">
 
-    <title>Sublimación</title>
+    <title>Con mas de 5 años de experiencia con la técnica de Sublimación</title>
 </head>
 
 <body>
@@ -34,16 +36,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                        <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nosotros--link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Productos</a>
+                        <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="servicios--link" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                         </a>
@@ -56,6 +58,10 @@
             </div>
         </div>
     </nav>
+
+    <div class="formatoTitulos">
+        <h1>Sublimación</h1>
+    </div>
 
       <!-- Intro -->
 
@@ -104,10 +110,11 @@
     <section>
         <div class="w-75 m-auto text-center " id="equipo">
             <h1 class="mb-5 fs-2">Personaliza lo que quieras <span class="text-primary">Pista Sublimación</span></h1>
-            <p class="fs-4">Expertos en las técnicas de Sublimación y Vinil Textil</p>
+            <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
+            <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid" src="./img/Portada_02.jpg" alt="">
+            <img class="img-fluid" src="./img/Portada_02.jpg" alt="Imagen grande de la empresa">
         </div>
     </section>
 
