--- a/vinil_textil.html
+++ b/vinil_textil.html
@@ -5,14 +5,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pista: Expertos en sublimación y vinil textil">
+    <meta name="keywords" content="ESTAMPADO, SUBLIMACION, VINIL, PERSONALIZACION, PLAYERAS, TAZAS, GORRAS ">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/estilos.css">
+        <link rel="stylesheet" href="./sass/estilos.css">
 
-    <title>Vinil Textil</title>
+    <title>Diseños en Vinil Textil de la mejor calidad</title>
 </head>
 
 <body>
@@ -34,16 +36,16 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                        <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nosotros--link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Productos</a>
+                        <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button"
+                        <a class="servicios--link" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
                         </a>
@@ -61,13 +63,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-                <img src="./img/carr01.jpg" class="d-block w-100" alt="...">
+                <img src="./img/carr01.jpg" class="d-block w-100" alt="Imagen Carrusel 01">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/carr02.jpg" class="d-block w-100" alt="...">
+                <img src="./img/carr02.jpg" class="d-block w-100" alt="Imagen Carrusel 02">
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-                <img src="./img/carr03.jpg" class="d-block w-100" alt="...">
+                <img src="./img/carr03.jpg" class="d-block w-100" alt="Imagen Carrusel 03">
             </div>
         </div>
     </div>
