Tercera entrega proyecto final

--- a/sublimacion.html
+++ b/sublimacion.html
@@ -19,11 +19,13 @@
 
 <body>
     <!-- Encabezado -->
-    <header class="container-fluid d-flex justify-content-center" id="encabezado">
-        <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p>
+    <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
+        <header class="encabezadoMixin"></header>
+        <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+        <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/abejaP.png" alt="" width="120" height="80">
@@ -59,8 +61,8 @@
         </div>
     </nav>
 
-    <div class="formatoTitulos">
-        <h1>Sublimación</h1>
+    <div class="formatoTitulos servicios--titulo">
+        <h1>SUBLIMACIÓN</h1>
     </div>
 
       <!-- Intro -->
@@ -114,7 +116,7 @@
             <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid" src="./img/Portada_02.jpg" alt="Imagen grande de la empresa">
+            <img class="img-fluid imagen00" src="./img/portada.png" alt="Imagen grande de la empresa">
         </div>
     </section>
 
