--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80">
+                <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80" id="imagenAbeja">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -54,7 +54,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="sublimacion.html">Sublimación</a></li>
-                            <li><a class="dropdown-item" href="vinil_textil.html">Vinil Textil</a></li>
+                            <li><a class="dropdown-item" href="mantenimiento.html">Vinil Textil</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
-    <div class="formatoTitulos">
+    <div class="formatoTitulos inicio--titulo">
     <h1>INICIO</h1>
 </div>
 
@@ -133,7 +133,7 @@
             <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid" src="./img/Portada_02.jpg" alt="">
+            <img class="img-fluid imagen00" src="./img/Portada.png" alt="">
         </div>
     </section>
 
