--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -18,7 +18,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/estilos.css">
+        <link rel="stylesheet" href="./sass/estilos.css">
 
         <title>Mantenimiento</title>
     </head>
@@ -26,11 +26,13 @@
 <body>
 
     <!-- Encabezado -->
-    <header class="container-fluid d-flex justify-content-center" id="encabezado">
-        <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p>
+    <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
+        <header class="encabezadoMixin"></header>
+        <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+        <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80">
@@ -43,29 +45,27 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="inicio--link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nosotros--link" href="nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Productos</a>
+                        <a class="productos--link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="servicios--link" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Servicios
-                        </a>
+                          </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="sublimacion.html">Sublimación</a></li>
-                            <li><a class="dropdown-item" href="vinil_textil.html">Vinil Textil</a></li>
+                            <li><a class="dropdown-item" href="mantenimiento.html">Vinil Textil</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <!--SLIDER DE IMAGENES-->
 
     <div class="mt-5 text-center">
@@ -80,7 +80,7 @@
             <p class="fs-4"></p>
         </div>
         <div class="mt-5 text-center">
-            <img class="w-85" src="./img/Portada_02.jpg" alt="Img demo del producto">
+            <img class="w-85 imagen00" src="./img/portada.png" alt="Img demo del producto">
         </div>
     </section>
 
