--- a/nosotros.html
+++ b/nosotros.html
@@ -16,11 +16,13 @@
       </head>
 <body>
     <!-- Encabezado -->
-    <header class="container-fluid d-flex justify-content-center" id="encabezado">
-        <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p>
-    </header>
+    <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
+      <header class="encabezadoMixin"></header>
+      <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+      <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
+  </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/abejaP.png" alt="" width="120" height="80">
@@ -46,15 +48,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="sublimacion.html">Sublimación</a></li>
-                    <li><a class="dropdown-item" href="vinil_textil.html">Vinil Textil</a></li>
+                    <li><a class="dropdown-item" href="mantenimiento.html">Vinil Textil</a></li>
                 </ul>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-
-      <div class="formatoTitulos">
+      
+      <div class="formatoTitulos nosotros--titulo">
         <h1>NOSOTROS</h1>
     </div>
 
@@ -92,7 +94,7 @@
             <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid" src="./img/Portada_02.jpg" alt="Imagen grande de la empresa">
+            <img class="img-fluid imagen00" src="./img/portada.png" alt="Imagen grande de la empresa">
         </div>
     </section>
 
