--- a/vinil_textil.html
+++ b/vinil_textil.html
@@ -19,8 +19,10 @@
 
 <body>
     <!-- Encabezado -->
-    <header class="container-fluid d-flex justify-content-center" id="encabezado">
-        <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p>
+    <!-- <header class="container-fluid d-flex justify-content-center" id="encabezado"> -->
+        <header class="encabezadoMixin"></header>
+        <p class = "encabezadoMixin">Contacto: 55-51-00-13-25</p>
+        <!-- <p class="text-light mb-0 p-2 fs-6">Contacto: 55-51-00-13-25</p> -->
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light " id="menu">
@@ -58,6 +60,7 @@
             </div>
         </div>
     </nav>
+    
     <!--SLIDER DE IMAGENES-->
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -124,7 +127,7 @@
             <p class="fs-4">Expertos en las técnicas de Sublimación y Vinil Textil</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid" src="./img/Portada_02.jpg" alt="">
+            <img class="img-fluid imagen00" src="./img/portada.png" alt="">
         </div>
     </section>
 
