Ultimos cambios entrega final 21FEB2022

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light" id="menu">
+        
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/abejaP.png" alt="Logotipo de la empresa" width="120" height="80" id="imagenAbeja">
@@ -93,59 +94,12 @@
       <img src="./img/textil_01.jpg">
       <h4>VINIL</h4>
       <p>Estampado de vinil textil en todo tipo de prendas</p>
-    </div>
+    </div>    
+</div>
 
-  </div>
-
-    <!-- Intro -->
-
-    <section class="w-50 mx-auto text-center pt-5" id="intro"> 
-        <h1 class="p-3 fs-2 border-top border-3">Personaliza tu taza, playera o gorra con nosotros. <span class="text-primary">Somos expertos en Sublimación y vinil.</span></h1>
-        <p class="p-3 fs-4"><span class="text-primary">Pista sublimación </span>Si no sabes que poner, nosotros te ayudamos.</p>
-    </section>
-
-    <!-- Servicios -->
-
-    <section class="container-fluid">
-        <div class="row w-75 mx-auto servicios-fila">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
-                <div>
-                    <h3 class="fs-5 mt-4 px-4 pb-1">Sublimación Tazas</h3>
-                    <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
-                <div>
-                    <h3 class="fs-5 mt-4 px-4 pb-1">Sublimación Gorras</h3>
-                    <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
-                <div>
-                    <h3 class="fs-5 mt-4 px-4 pb-1">Vinil Textil Playeras</h3>
-                    <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex icono-wrap">
-                <img src="./img/abejaP.png" alt="Img demo del producto" width="180" height="160">
-                <div>
-                    <h3 class="fs-5 mt-4 px-4 pb-1">Vinil Textil Gorras</h3>
-                    <p class="px-4">Personalización de tazas, playeras y gorras con sublimación y vinil textil.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-
-    <section>
-        <div class="w-75 m-auto text-center" id="equipo">
-            <h1 class="mb-5 fs-2">Personaliza lo que quieras <span class="text-primary">Pista Sublimación</span></h1>
+    <section class="info-index">
+        <div class="w-75 m-auto text-center" id="equipo-portada">
             <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
-            <p class="EstiloParrafos">Te asesoramos y te apoyamos con tu diseño</p>
         </div>
         <div class="mt-5 text-center">
             <img class="img-fluid imagen00" src="./img/Portada.png" alt="">
