--- a/nosotros.html
+++ b/nosotros.html
@@ -95,7 +95,7 @@
 
     <!-- Footer -->
 
-    <section>
+    <section class="info-index">
         <div class="w-75 m-auto text-center" id="equipo">
             <span class="text-primary mb-5 fs-2">Pista Sublimación</span>
             <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
