--- a/sublimacion.html
+++ b/sublimacion.html
@@ -64,10 +64,6 @@
         </div>
     </nav>
 
-    <div class="formatoTitulos servicios--titulo">
-        <h1>SUBLIMACIÓN</h1>
-    </div>
-
       <!-- Intro -->
 
       <section class="w-50 mx-auto text-center pt-5" id="intro"> 
@@ -112,7 +108,7 @@
 
     <!-- Footer -->
 
-    <section>
+    <section class="info-index">
         <div class="w-75 m-auto text-center " id="equipo">
             <h1 class="mb-5 fs-2">Personaliza lo que quieras <span class="text-primary">Pista Sublimación</span></h1>
             <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
