--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -79,7 +79,7 @@
 
     <!-- Footer -->
 
-    <section>
+    <section class="info-index">
         <div class="w-75 m-auto text-center" id="equipo">
             <h1 class="mb-5 fs-2"><span class="text-primary"></span></h1>
             <p class="fs-4"></p>
