--- a/vinil_textil.html
+++ b/vinil_textil.html
@@ -125,7 +125,7 @@
 
     <!-- Footer -->
 
-    <section>
+    <section class="info-index">
         <div class="w-75 m-auto text-center" id="equipo">
             <h1 class="mb-5 fs-2">Personaliza lo que quieras <span class="text-primary">Pista Sublimación</span></h1>
             <p class="fs-4">Expertos en las técnicas de Sublimación y Vinil Textil</p>
