--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p class="EstiloParrafosDos">Expertos en las técnicas de Sublimación y Vinil Textil</p>
         </div>
         <div class="mt-5 text-center">
-            <img class="img-fluid imagen00" src="./img/Portada.png" alt="">
+            <img class="img-fluid imagen00" src="./img/portada.png" alt="Imagen grande de la empresa">
         </div>
     </section>
 
